--- a/lua-iconv/copy_over/CMakeLists.txt
+++ b/lua-iconv/copy_over/CMakeLists.txt
@@ -16,7 +16,10 @@ ADD_LIBRARY(TARGET_luaiconv MODULE
             luaiconv.c)
 TARGET_INCLUDE_DIRECTORIES(TARGET_luaiconv
                            PRIVATE ${LIBICONV_INCLUDE_DIR} ${LUA_INCLUDE_DIR})
-TARGET_LINK_LIBRARIES(TARGET_luaiconv ${LIBICONV_LIBRARY} ${LIBCHARSET_LIBRARY} ${LUA_LIBRARIES})
+TARGET_LINK_LIBRARIES(TARGET_luaiconv ${LIBICONV_LIBRARY} ${LIBCHARSET_LIBRARY})
+IF((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))
+	TARGET_LINK_LIBRARIES(TARGET_luaiconv ${LUA_LIBRARIES})
+ENDIF((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))
 
 # Set the name of the output file to "iconv".
 SET_TARGET_PROPERTIES(TARGET_luaiconv PROPERTIES PREFIX "" OUTPUT_NAME "iconv")
